<resources>
    <string name="app_name">MyCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--<string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="fslash">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="zero">0</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="percentage">%</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>-->
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonSquared">^</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>
    <string name="buttonImaginary">i</string>
    <string name="buttonNaturalLog">ln</string>
    <string name="buttonLog">log</string>
    <string name="buttonPi">π</string>
    <string name="buttonExponential">e</string>
    <string name="buttonPercentage">%</string>
    <string name="buttonExclamation">!</string>

    <string name="btnAdvance">Go To Advance View</string>
    <string name="btnBasic">Go To Basic View</string>
    <string name="buttonDel">Del</string>


</resources>
